Fix endpoint error when create cert